--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 color-eyre = "0.6.4"
 crossterm = "0.29.0"
 homedir = "0.3.4"
