--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 chrono = "0.4.41"
 color-eyre = "0.6.4"
 crossterm = "0.29.0"
+csv = "1.3.1"
 homedir = "0.3.4"
 ratatui = "0.29.0"
 tui-textarea = "0.7.0"
